Page MenuHome GnuPG

Gnupg directories not variable in the documentation
Closed, ResolvedPublic

Description

The directories mentioned in the documentation are not variable and thus when
they are changed at build time (as debian does) the documentation and the
behaviour differs.
There is debian bug (725804) for this.

I could not find a clean way to change this as afaik the build variables are not
available in the .texi files. The only variables I found come from version.texi
and it is unclear to me where that file comes from.

But I think a solution could be adding something like
echo "@set SYSCONFDIR $(sysconfdir)" >> directories.texi
...

in the makefile and include / use those in the texi files.

Event Timeline

aheinecke set Version to 2.0.25.
aheinecke set External Link to https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=725804.
aheinecke added subscribers: aheinecke, werner.
werner lowered the priority of this task from Normal to Wishlist.Jul 3 2014, 11:28 AM
werner added a project: Feature Request.
werner removed a project: Bug Report.

Won't be done for 2.0 but I will try to implement that for 2.1

werner set Due Date to Jun 30 2015, 2:00 AM.Jun 8 2015, 8:09 PM

Done with commit 25331bb for 2.1.5.
Won't be backported to 2.0 or 1.4.

This also changes the publication date to the date of the last commit for one of
the texi files. This was the original intention of the version.texi file but
that did not worked in a git world.

werner added a project: Restricted Project.
werner removed a project: Restricted Project.